Fix displaying hero component on mobile devices, change code to show and hide more info component image.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,22 +104,23 @@ a:hover {
   padding: 0;
   &__background {
     width: 100%;
-    height: 80vh;
+    height: 30vh;
     object-fit: cover;
   }
   &__description {
+    width: 100%;
     position: absolute;
-    padding: 1rem 3rem;
+    padding: 1rem 1.75rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 50vw;
     bottom: 0;
   }
   &__title {
-    font-size: 3rem;
+    font-size: 1.5rem;
   }
-  &__ovierview {
+  &__overview {
+    display: none;
     margin: 0;
     padding-bottom: 1rem;
   }
@@ -436,6 +437,11 @@ a:hover {
     svg {
       width: 4rem;
       height: 4rem;
+      transition: 0.2s all;
+    }
+    svg:hover {
+      transform: scale(1.1);
+      cursor: pointer;
     }
   }
 
@@ -471,4 +477,33 @@ a:hover {
 
 .footer-logos > img {
   max-width: 200px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero {
+    &__overview {
+      display: block;
+    }
+    &__background {
+      height: 45vh;
+    }
+    &__description {
+      margin: 2rem;
+      width: 75%;
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .hero {
+    &__background {
+      height: 75vh;
+    }
+    &__description {
+      width: 40%;
+    }
+    &__title {
+      font-size: 2rem;
+    }
+  }
 }
